--- a/TFM_muestra19T2_20T2 - EDA - VF.ipynb
+++ b/TFM_muestra19T2_20T2 - EDA - VF.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,11 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "epa19t2 = pd.read_csv(\"C:/Users/34654/Desktop/Big_Data/Master/TFM/Microdatos EPA - csv/EPA_2019T2_2.csv\",sep=',')"
+    "epa19t2 = pd.read_csv(\"C:/Users/34654/Desktop/Big_Data/Master/TFM/Microdatos EPA - csv/EPA_2019T2.csv\",sep='\\t')"
    ]
   },
   {
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epa20t2 = pd.read_csv(\"C:/Users/34654/Desktop/Big_Data/Master/TFM/Microdatos EPA - csv/EPA_2020T2_2.csv\",sep=',')"
+    "epa20t2 = pd.read_csv(\"C:/Users/34654/Desktop/Big_Data/Master/TFM/Microdatos EPA - csv/EPA_2020T2.csv\",sep='\\t')"
    ]
   },
   {
